logs/offboard_pkg/build.make.601.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:78:5: error: expected unqualified-id before ‘while’
   78 |     while (ros::ok())
      |     ^~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:89:1: error: expected declaration before ‘}’ token
   89 | }
      | ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
